chore: update jdk to 21