@@ -1,8 +1,8 @@
 # Dockerfile for fly.io deploy
 
-FROM openjdk:11-slim-buster AS runtime
+FROM eclipse-temurin:21 AS runtime
 COPY service.jar /app.jar
 
-ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:InitialRAMPercentage=50 -XX:MaxRAMPercentage=90 -XshowSettings:vm"
+ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:InitialRAMPercentage=50 -XX:MaxRAMPercentage=90 -XshowSettings:vm --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
 
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar /app.jar"]
